--- a/style.css
+++ b/style.css
@@ -31,6 +31,7 @@ body {
   font-family: 'Lato', sans-serif;
   font-weight: 400;
   line-height: 1.5;
+  color: #444;
   margin: 0;
 }
 
@@ -40,7 +41,6 @@ header {
 
 h2 {
   font-size: 2rem;
-  color: #444;
   margin: 0;
 }
 
@@ -56,13 +56,22 @@ h2 {
   border-bottom: 1px solid #ccc;
 }
 
-.item img {
+.content img {
   width: 100%;
 }
 
-.item p {
+.content .text {
   margin: 0;
-  padding-bottom: 10px;
+  padding-bottom: 15px;
+}
+
+.content .date {
+  font-size: 1.2rem;
+  font-weight: 400;
+  font-style: italic;
+  color: #766;
+  margin: 0;
+  padding-bottom: 15px;
 }
 
 footer {
