--- a/style.css
+++ b/style.css
@@ -35,6 +35,20 @@ body {
   margin: 0;
 }
 
+a {
+  color: #c03060;
+  text-decoration: none;
+  border-bottom: 1px dashed currentColor;
+  cursor: crosshair;
+}
+
+a:hover,
+a:focus {
+  color: #006edb;
+  border-top: 1px dashed currentColor;
+  border-bottom: 0;
+}
+
 header {
   padding: 20px 0;
 }
@@ -49,11 +63,12 @@ h2 {
   column-gap: 30px;
   row-gap: 0px;
   grid-template-columns: repeat(auto-fill, minmax(320px, 1fr));
-  grid-auto-rows: 2px;
+  grid-auto-rows: 1px;
 }
 
 .content img {
   width: 100%;
+  margin-bottom: 10px;
 }
 
 .content .text {
