--- a/style.css
+++ b/style.css
@@ -61,9 +61,10 @@ h2 {
 .grid {
   display: grid;
   column-gap: 30px;
-  row-gap: 0px;
+  row-gap: 20px;
   grid-template-columns: repeat(auto-fill, minmax(320px, 1fr));
-  grid-auto-rows: 1px;
+  grid-auto-rows: 10px;
+  align-items: self-start;
 }
 
 .content img {
