--- a/style.css
+++ b/style.css
@@ -58,6 +58,10 @@ h2 {
   margin: 0;
 }
 
+.desc {
+  margin: 10px 0 0;
+}
+
 .grid {
   display: grid;
   column-gap: 30px;
@@ -83,7 +87,7 @@ h2 {
   font-style: italic;
   color: #766;
   margin: 0;
-  padding-bottom: 30px;
+  padding-bottom: 20px;
   border-bottom: 1px solid #ccc;
 }
 
@@ -95,4 +99,18 @@ footer {
 
 footer .heart {
   color: #c03060;
+}
+
+@media (max-width: 700px) {
+  body {
+    font-size: 1.4rem;
+  }
+
+  h2 {
+    font-size: 1.8rem;
+  }
+
+  .desc {
+    margin-top: 8px;
+  }
 }
